fix: overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,10 +11,11 @@
   z-index: 10000;
   animation: fades 2s forwards;
   opacity: 1;
+
 }
 
-
 .page-enter-active {
+
   position: absolute;
   animation: fade-in 1s forwards;
 }
@@ -42,10 +43,15 @@
 
 @keyframes fade-in {
   0% {
+    top: -1000px;
     opacity: 0;
+  }
+  1% {
+    top: 0;
   }
   50% {
     opacity: 0;
+
   }
   100% {
     opacity: 1;
